--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,26 @@
 .App-link {
   color: #61dafb;
 }
+.header {
+ 
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+
+}
+.btnconfig {
+ 
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-left: 35%;
+  
+
+}
 
 @keyframes App-logo-spin {
   from {
